11_0_ConfigMap-official.yml
apiVersion: v1
kind: Pod
metadata:
    name: configmap-demo-pod
spec:
    containers:
    - name: demo
        image: game.example/demo-game
        volumeMounts:
        - name: config
        mountPath: "/config"
        readOnly: true
    volumes:
    # You set volumes at the Pod level, then mount them into containers inside that Pod
    - name: config
        configMap:
        # Provide the name of the ConfigMap you want to mount.
        name: game-demo
