1_1_pod-with-pod-affinity.yaml
# https://k8smeetup.github.io/docs/concepts/configuration/assign-pod-node/
# https://docs.openshift.com/container-platform/3.6/admin_guide/scheduling/pod_affinity.html
# https://kubernetes.io/blog/2017/03/advanced-scheduling-in-kubernetes/
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-affinity
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: security
            operator: In
            values:
            - S1
        topologyKey: failure-domain.beta.kubernetes.io/zone
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: security
              operator: In
              values:
              - S2
          topologyKey: kubernetes.io/hostname
  containers:
  - name: with-pod-affinity
    image: k8s.gcr.io/pause:2.0
