4_0_deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-deployment
  namespace: demo
  labels:
    app: nginx-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
      - name: nginx-hello
        image: qzschen/nginx-hello
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 125m
            memory: 1Gi




# chenqiang@Johnny kubernetes_resources_yaml_examples$ kubectl apply -f 4_0_deployment.yaml
# deployment.apps/nginx-hello-deployment created
# chenqiang@Johnny kubernetes_resources_yaml_examples$ kubectl -n demo get deploy
# NAME                     READY   UP-TO-DATE   AVAILABLE   AGE
# nginx-hello-deployment   3/3     1            3           4s
# chenqiang@Johnny kubernetes_resources_yaml_examples$ kubectl -n demo get rs
# NAME                               DESIRED   CURRENT   READY   AGE
# nginx-hello-deployment-dfffb8bc9   2         2         1       22s
# nginx-hello-rs                     2         2         2       5m22s
# chenqiang@Johnny kubernetes_resources_yaml_examples$ kubectl -n demo get rs
# NAME                               DESIRED   CURRENT   READY   AGE
# nginx-hello-deployment-dfffb8bc9   3         3         2       29s
# nginx-hello-rs                     1         1         1       5m29s
# chenqiang@Johnny kubernetes_resources_yaml_examples$ kubectl -n demo get rs
# NAME                               DESIRED   CURRENT   READY   AGE
# nginx-hello-deployment-dfffb8bc9   3         3         2       32s
# nginx-hello-rs                     1         1         1       5m32s

# chenqiang@Johnny kubernetes_resources_yaml_examples$ kubectl -n demo get rs
# NAME                               DESIRED   CURRENT   READY   AGE
# nginx-hello-deployment-dfffb8bc9   3         3         3       93s
# nginx-hello-rs                     0         0         0       6m33s

# chenqiang@Johnny kubernetes_resources_yaml_examples$ kubectl -n demo get po  -o wide
# NAME                                     READY   STATUS        RESTARTS   AGE   IP               NODE           NOMINATED NODE   READINESS GATES
# nginx-hello                              0/1     Terminating   0          58m   172.17.149.143   10.130.62.10   <none>           <none>
# nginx-hello-deployment-dfffb8bc9-lskxn   1/1     Running       0          58s   172.17.149.183   10.130.62.10   <none>           <none>
# nginx-hello-deployment-dfffb8bc9-s2hww   1/1     Running       0          41s   172.17.65.150    10.130.62.11   <none>           <none>
# nginx-hello-deployment-dfffb8bc9-s7897   1/1     Running       0          34s   172.17.161.173   10.130.62.16   <none>           <none>
# chenqiang@Johnny kubernetes_resources_yaml_examples$ kubectl -n demo get po  -o wide
# NAME                                     READY   STATUS    RESTARTS   AGE   IP               NODE           NOMINATED NODE   READINESS GATES
# nginx-hello-deployment-dfffb8bc9-lskxn   1/1     Running   0          65s   172.17.149.183   10.130.62.10   <none>           <none>
# nginx-hello-deployment-dfffb8bc9-s2hww   1/1     Running   0          48s   172.17.65.150    10.130.62.11   <none>           <none>
# nginx-hello-deployment-dfffb8bc9-s7897   1/1     Running   0          41s   172.17.161.173   10.130.62.16   <none>           <none>
