2_0_service_nodeport.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-deployment
  namespace: demo
  labels:
    app: nginx-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx-hello
          image: qzschen/nginx-hello
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 125m
              memory: 1Gi
          securityContext:
            privileged: true

---
kind: Service
apiVersion: v1
metadata:
  name: nginx-hello-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31001
