12_1_ingress_demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-deployment
  namespace: demo
  labels:
    app: nginx-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx-hello
          image: qzschen/nginx-hello
          ports:
            - containerPort: 80
          securityContext:
            privileged: true
      volumes:
      imagePullSecrets:
        - name: regcred

---
kind: Service
apiVersion: v1
metadata:
  name: nginx-hello-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-hello-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - backend:
              serviceName: nginx-hello-service
              servicePort: 80
# k8s-node1-[appuser@kubeadm-master ~]$ kubectl get no -o wide
# NAME             STATUS   ROLES    AGE   VERSION   INTERNAL-IP     EXTERNAL-IP   OS-IMAGE                KERNEL-VERSION              CONTAINER-RUNTIME
# k8s-node2        Ready    <none>   12d   v1.14.0   10.130.174.28   <none>        CentOS Linux 7 (Core)   3.10.0-862.3.3.el7.x86_64   docker://18.3.1
# kubeadm-master   Ready    master   12d   v1.14.0   10.130.174.27   <none>        CentOS Linux 7 (Core)   3.10.0-862.3.3.el7.x86_64   docker://18.3.1
# k8s-node1-[appuser@kubeadm-master ~]$ kubectl -n ingress-nginx get svc
# NAME                   TYPE        CLUSTER-IP     EXTERNAL-IP   PORT(S)                      AGE
# default-http-backend   ClusterIP   10.1.59.251    <none>        80/TCP                       58m
# ingress-nginx          NodePort    10.1.196.219   <none>        80:30000/TCP,443:32344/TCP   58m
# k8s-node1-[appuser@kubeadm-master ~]$ kubectl -n demo get svc
# NAME                  TYPE       CLUSTER-IP   EXTERNAL-IP   PORT(S)        AGE
# nginx-hello-service   NodePort   10.1.79.91   <none>        80:30771/TCP   29m
# k8s-node1-[appuser@kubeadm-master ~]$ curl --resolve foo.bar.com:30000:10.130.174.27 http://foo.bar.com:30000
# Hello nginx
